# scholar-paper-mcp

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  INSTALL.md  LICENSE  README.md  pyproject.toml
docs/: CONFIGURATION.md  PLAN.md  WORKFLOW.md  architecture.drawio
models/: README.md
src/scholar_paper_mcp/: __init__.py  __main__.py  config.py  exceptions.py  models.py  server.py
src/scholar_paper_mcp/api/: __init__.py  circuit_breaker.py  client.py  offline.py  rate_limiter.py
src/scholar_paper_mcp/storage/: __init__.py  authors.py  cache.py  citations.py  db.py  embeddings.py  fts.py  papers.py  schema.sql  sessions.py
src/scholar_paper_mcp/storage/migrations/: 002_api_cache.sql
src/scholar_paper_mcp/tools/: __init__.py  authors.py  bibtex.py  papers.py  recommendations.py  session.py
tests/: conftest.py  test_authors_tools.py  test_cache.py  test_circuit_breaker.py  test_client.py  test_config.py  test_docs.py  test_embeddings.py  test_exceptions.py  test_fts.py  test_models.py  test_offline.py  test_papers_tools.py  test_rate_limiter.py  test_recommendations_tools.py  test_server.py  test_session_tools.py  test_smoke.py  test_storage.py  test_storage_authors.py  test_storage_citations.py  test_storage_migrations.py  test_storage_papers.py  test_storage_sessions.py
