[project]
name = "scholar-paper-mcp"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "TudeStillLearning!" }]
description = "Hybrid MCP server for Semantic Scholar with persistent cache and offline fallback"
dependencies = [
    "sqlite-vec>=0.1.9",
]

[project.urls]
Homepage = "https://github.com/TudeOrangBiasa/scholar-paper-mcp"
Repository = "https://github.com/TudeOrangBiasa/scholar-paper-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scholar_paper_mcp"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["UP017"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.54",
]

